// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GorgiasChatIntegrationCampaigns/> Campaign actions should display the delete buttons correctly 1`] = `
<div>
  <div
    class="full-width"
  >
    <div
      class="page-header pageHeader"
    >
      <nav
        aria-label="breadcrumb"
        class=""
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item"
          >
            <a
              to="/app/settings/channels/gorgias_chat"
            >
              Chat
            </a>
          </li>
          <li
            class="breadcrumb-item"
          >
            My new chat
          </li>
        </ol>
      </nav>
      <div>
        <div
          class="automationSubscriptionButton"
        >
          <div
            class="d-flex align-items-center upgradeLink"
          >
            <a
              to="[object Object]"
            >
              <button
                aria-disabled="false"
                class="wrapper ghost primary medium"
                type="button"
              >
                <span
                  class="wrapper"
                >
                  <i
                    class="material-icons icon isLeft medium"
                  >
                    auto_awesome
                  </i>
                  Upgrade
                </span>
              </button>
            </a>
          </div>
        </div>
        <a
          class="createCampaignLink"
          to="/app/settings/channels/gorgias_chat/118/campaigns/new"
        >
          <button
            aria-disabled="false"
            class="wrapper fill primary medium"
            type="button"
          >
            Create Campaign
          </button>
        </a>
      </div>
    </div>
    <div
      data-testid="GorgiasChatIntegrationHeader"
    />
    <div
      class="pageContainer container-fluid"
    >
      <div
        class="campaignsToolbar"
      >
        <div
          class="wrapper search"
        >
          <span
            class="prefix"
          >
            <i
              class="material-icons icon"
            >
              search
            </i>
          </span>
          <input
            class="input"
            id="input-text-16"
            name="input-text-16"
            placeholder="Search by campaign name"
            type="text"
            value=""
          />
          <span
            class="suffix"
          >
            <i
              class="material-icons icon material-icons-outlined clear hidden"
            >
              cancel
            </i>
          </span>
        </div>
        <div
          class="container"
          role="radiogroup"
        >
          <label
            class="badge checked"
          >
            <input
              checked=""
              class="input"
              name="all"
              type="radio"
            />
            <div>
              All
            </div>
          </label>
          <label
            class="badge"
          >
            <input
              class="input"
              name="active"
              type="radio"
            />
            <div>
              Active
            </div>
          </label>
          <label
            class="badge"
          >
            <input
              class="input"
              name="inactive"
              type="radio"
            />
            <div>
              Inactive
            </div>
          </label>
        </div>
      </div>
      <div
        class="quickFiltersContainer"
      >
        <div
          class="container"
        >
          <div
            class="item"
          >
            <button
              aria-pressed="false"
              class="container"
            >
              <span>
                Contains product cards
              </span>
            </button>
          </div>
          <div
            class="item"
          >
            <button
              aria-pressed="false"
              class="container"
            >
              <span>
                Contains discount codes
              </span>
            </button>
          </div>
          <div
            class="item"
          >
            <button
              aria-pressed="false"
              class="container"
            >
              <span>
                Triggered on exit intent
              </span>
            </button>
          </div>
          <div
            class="item"
          >
            <button
              aria-pressed="false"
              class="container"
            >
              <span>
                Triggered outside business hours
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <table
      class="table table-integrations mt-3 campaignsTable"
    >
      <thead
        class=""
      >
        <tr
          class="headerRow"
        >
          <td
            class="wrapper normal"
            style="width: 88px;"
          >
            <div
              class="content"
            >
              <div
                class="cell"
              >
                <span
                  class="title"
                />
                <i
                  class="material-icons md-1 directionIcon"
                >
                  arrow_upward
                </i>
              </div>
            </div>
          </td>
          <td
            class="wrapper is-clickable normal"
          >
            <div
              class="content"
            >
              <div
                class="cell"
              >
                <span
                  class="title"
                >
                  Campaign name
                </span>
                <i
                  class="material-icons md-1 directionIcon"
                >
                  arrow_upward
                </i>
              </div>
            </div>
          </td>
          <td
            class="wrapper is-clickable normal"
          >
            <div
              class="content"
            >
              <div
                class="cell"
              >
                <span
                  class="title"
                >
                  Creation date
                </span>
                <i
                  class="material-icons md-1 directionIcon"
                >
                  arrow_upward
                </i>
              </div>
            </div>
          </td>
          <td
            class="wrapper normal"
            style="width: 110px;"
          >
            <div
              class="content"
            >
              <div
                class="cell"
              >
                <span
                  class="title"
                />
                <i
                  class="material-icons md-1 directionIcon"
                >
                  arrow_upward
                </i>
              </div>
            </div>
          </td>
        </tr>
      </thead>
      <tbody
        class="tableBody"
      >
        <tr
          class="row tableRow"
        >
          <td
            class="wrapper normal"
            style="width: 88px;"
          >
            <div
              class="cellContent"
            >
              <div>
                <label
                  aria-checked="true"
                  aria-label="Enable campaign Super campaign"
                  class="label label"
                  for="toggle-button-17"
                  role="switch"
                >
                  <input
                    aria-label="Enable campaign Super campaign"
                    checked=""
                    class="input"
                    disabled=""
                    id="toggle-button-17"
                    name="toggle-button-17"
                    type="checkbox"
                  />
                  <div
                    class="slider"
                  />
                </label>
              </div>
            </div>
          </td>
          <td
            class="wrapper normal"
          >
            <div
              class="cellContent anchorCell"
            >
              <a
                class="anchor"
                to="/app/settings/channels/gorgias_chat/118/campaigns/156a4d-fg68h40-sd6f4"
              >
                <div>
                  <b>
                    Super campaign
                  </b>
                </div>
              </a>
            </div>
          </td>
          <td
            class="wrapper normal"
          >
            <div
              class="cellContent"
            >
              <div />
            </div>
          </td>
          <td
            class="wrapper normal"
            style="width: 110px;"
          >
            <div
              class="cellContent"
            >
              <button
                aria-disabled="false"
                class="wrapper mr-1 wrapper ghost ghost secondary medium"
                data-testid="duplicate-icon-button"
                title="Duplicate campaign"
                type="button"
              >
                <i
                  class="material-icons icon"
                >
                  file_copy
                </i>
              </button>
              <button
                aria-disabled="false"
                class="wrapper mr-1 wrapper ghost ghost destructive medium"
                data-testid="delete-icon-button"
                id="delete-campaign-156a4d-fg68h40-sd6f4"
                title="Delete campaign"
                type="button"
              >
                <i
                  class="material-icons icon"
                >
                  delete
                </i>
              </button>
            </div>
          </td>
        </tr>
        <tr
          class="row tableRow"
        >
          <td
            class="wrapper normal"
            style="width: 88px;"
          >
            <div
              class="cellContent"
            >
              <div>
                <label
                  aria-checked="false"
                  aria-label="Enable campaign Not so good campaign"
                  class="label label"
                  for="toggle-button-19"
                  role="switch"
                >
                  <input
                    aria-label="Enable campaign Not so good campaign"
                    class="input"
                    disabled=""
                    id="toggle-button-19"
                    name="toggle-button-19"
                    type="checkbox"
                  />
                  <div
                    class="slider"
                  />
                </label>
              </div>
            </div>
          </td>
          <td
            class="wrapper normal"
          >
            <div
              class="cellContent anchorCell"
            >
              <a
                class="anchor"
                to="/app/settings/channels/gorgias_chat/118/campaigns/not-so-good-campaign-d8f9-fds486-sf78"
              >
                <div>
                  <b>
                    Not so good campaign
                  </b>
                </div>
              </a>
            </div>
          </td>
          <td
            class="wrapper normal"
          >
            <div
              class="cellContent"
            >
              <div />
            </div>
          </td>
          <td
            class="wrapper normal"
            style="width: 110px;"
          >
            <div
              class="cellContent"
            >
              <button
                aria-disabled="false"
                class="wrapper mr-1 wrapper ghost ghost secondary medium"
                data-testid="duplicate-icon-button"
                title="Duplicate campaign"
                type="button"
              >
                <i
                  class="material-icons icon"
                >
                  file_copy
                </i>
              </button>
              <button
                aria-disabled="false"
                class="wrapper mr-1 wrapper ghost ghost destructive medium"
                data-testid="delete-icon-button"
                id="delete-campaign-not-so-good-campaign-d8f9-fds486-sf78"
                title="Delete campaign"
                type="button"
              >
                <i
                  class="material-icons icon"
                >
                  delete
                </i>
              </button>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`<GorgiasChatIntegrationCampaigns/> Campaign actions should display the duplicate buttons correctly 1`] = `
<div>
  <div
    class="full-width"
  >
    <div
      class="page-header pageHeader"
    >
      <nav
        aria-label="breadcrumb"
        class=""
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item"
          >
            <a
              to="/app/settings/channels/gorgias_chat"
            >
              Chat
            </a>
          </li>
          <li
            class="breadcrumb-item"
          >
            My new chat
          </li>
        </ol>
      </nav>
      <div>
        <div
          class="automationSubscriptionButton"
        >
          <div
            class="d-flex align-items-center upgradeLink"
          >
            <a
              to="[object Object]"
            >
              <button
                aria-disabled="false"
                class="wrapper ghost primary medium"
                type="button"
              >
                <span
                  class="wrapper"
                >
                  <i
                    class="material-icons icon isLeft medium"
                  >
                    auto_awesome
                  </i>
                  Upgrade
                </span>
              </button>
            </a>
          </div>
        </div>
        <a
          class="createCampaignLink"
          to="/app/settings/channels/gorgias_chat/118/campaigns/new"
        >
          <button
            aria-disabled="false"
            class="wrapper fill primary medium"
            type="button"
          >
            Create Campaign
          </button>
        </a>
      </div>
    </div>
    <div
      data-testid="GorgiasChatIntegrationHeader"
    />
    <div
      class="pageContainer container-fluid"
    >
      <div
        class="campaignsToolbar"
      >
        <div
          class="wrapper search"
        >
          <span
            class="prefix"
          >
            <i
              class="material-icons icon"
            >
              search
            </i>
          </span>
          <input
            class="input"
            id="input-text-11"
            name="input-text-11"
            placeholder="Search by campaign name"
            type="text"
            value=""
          />
          <span
            class="suffix"
          >
            <i
              class="material-icons icon material-icons-outlined clear hidden"
            >
              cancel
            </i>
          </span>
        </div>
        <div
          class="container"
          role="radiogroup"
        >
          <label
            class="badge checked"
          >
            <input
              checked=""
              class="input"
              name="all"
              type="radio"
            />
            <div>
              All
            </div>
          </label>
          <label
            class="badge"
          >
            <input
              class="input"
              name="active"
              type="radio"
            />
            <div>
              Active
            </div>
          </label>
          <label
            class="badge"
          >
            <input
              class="input"
              name="inactive"
              type="radio"
            />
            <div>
              Inactive
            </div>
          </label>
        </div>
      </div>
      <div
        class="quickFiltersContainer"
      >
        <div
          class="container"
        >
          <div
            class="item"
          >
            <button
              aria-pressed="false"
              class="container"
            >
              <span>
                Contains product cards
              </span>
            </button>
          </div>
          <div
            class="item"
          >
            <button
              aria-pressed="false"
              class="container"
            >
              <span>
                Contains discount codes
              </span>
            </button>
          </div>
          <div
            class="item"
          >
            <button
              aria-pressed="false"
              class="container"
            >
              <span>
                Triggered on exit intent
              </span>
            </button>
          </div>
          <div
            class="item"
          >
            <button
              aria-pressed="false"
              class="container"
            >
              <span>
                Triggered outside business hours
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <table
      class="table table-integrations mt-3 campaignsTable"
    >
      <thead
        class=""
      >
        <tr
          class="headerRow"
        >
          <td
            class="wrapper normal"
            style="width: 88px;"
          >
            <div
              class="content"
            >
              <div
                class="cell"
              >
                <span
                  class="title"
                />
                <i
                  class="material-icons md-1 directionIcon"
                >
                  arrow_upward
                </i>
              </div>
            </div>
          </td>
          <td
            class="wrapper is-clickable normal"
          >
            <div
              class="content"
            >
              <div
                class="cell"
              >
                <span
                  class="title"
                >
                  Campaign name
                </span>
                <i
                  class="material-icons md-1 directionIcon"
                >
                  arrow_upward
                </i>
              </div>
            </div>
          </td>
          <td
            class="wrapper is-clickable normal"
          >
            <div
              class="content"
            >
              <div
                class="cell"
              >
                <span
                  class="title"
                >
                  Creation date
                </span>
                <i
                  class="material-icons md-1 directionIcon"
                >
                  arrow_upward
                </i>
              </div>
            </div>
          </td>
          <td
            class="wrapper normal"
            style="width: 110px;"
          >
            <div
              class="content"
            >
              <div
                class="cell"
              >
                <span
                  class="title"
                />
                <i
                  class="material-icons md-1 directionIcon"
                >
                  arrow_upward
                </i>
              </div>
            </div>
          </td>
        </tr>
      </thead>
      <tbody
        class="tableBody"
      >
        <tr
          class="row tableRow"
        >
          <td
            class="wrapper normal"
            style="width: 88px;"
          >
            <div
              class="cellContent"
            >
              <div>
                <label
                  aria-checked="true"
                  aria-label="Enable campaign Super campaign"
                  class="label label"
                  for="toggle-button-12"
                  role="switch"
                >
                  <input
                    aria-label="Enable campaign Super campaign"
                    checked=""
                    class="input"
                    disabled=""
                    id="toggle-button-12"
                    name="toggle-button-12"
                    type="checkbox"
                  />
                  <div
                    class="slider"
                  />
                </label>
              </div>
            </div>
          </td>
          <td
            class="wrapper normal"
          >
            <div
              class="cellContent anchorCell"
            >
              <a
                class="anchor"
                to="/app/settings/channels/gorgias_chat/118/campaigns/156a4d-fg68h40-sd6f4"
              >
                <div>
                  <b>
                    Super campaign
                  </b>
                </div>
              </a>
            </div>
          </td>
          <td
            class="wrapper normal"
          >
            <div
              class="cellContent"
            >
              <div />
            </div>
          </td>
          <td
            class="wrapper normal"
            style="width: 110px;"
          >
            <div
              class="cellContent"
            >
              <button
                aria-disabled="false"
                class="wrapper mr-1 wrapper ghost ghost secondary medium"
                data-testid="duplicate-icon-button"
                title="Duplicate campaign"
                type="button"
              >
                <i
                  class="material-icons icon"
                >
                  file_copy
                </i>
              </button>
              <button
                aria-disabled="false"
                class="wrapper mr-1 wrapper ghost ghost destructive medium"
                data-testid="delete-icon-button"
                id="delete-campaign-156a4d-fg68h40-sd6f4"
                title="Delete campaign"
                type="button"
              >
                <i
                  class="material-icons icon"
                >
                  delete
                </i>
              </button>
            </div>
          </td>
        </tr>
        <tr
          class="row tableRow"
        >
          <td
            class="wrapper normal"
            style="width: 88px;"
          >
            <div
              class="cellContent"
            >
              <div>
                <label
                  aria-checked="false"
                  aria-label="Enable campaign Not so good campaign"
                  class="label label"
                  for="toggle-button-14"
                  role="switch"
                >
                  <input
                    aria-label="Enable campaign Not so good campaign"
                    class="input"
                    disabled=""
                    id="toggle-button-14"
                    name="toggle-button-14"
                    type="checkbox"
                  />
                  <div
                    class="slider"
                  />
                </label>
              </div>
            </div>
          </td>
          <td
            class="wrapper normal"
          >
            <div
              class="cellContent anchorCell"
            >
              <a
                class="anchor"
                to="/app/settings/channels/gorgias_chat/118/campaigns/not-so-good-campaign-d8f9-fds486-sf78"
              >
                <div>
                  <b>
                    Not so good campaign
                  </b>
                </div>
              </a>
            </div>
          </td>
          <td
            class="wrapper normal"
          >
            <div
              class="cellContent"
            >
              <div />
            </div>
          </td>
          <td
            class="wrapper normal"
            style="width: 110px;"
          >
            <div
              class="cellContent"
            >
              <button
                aria-disabled="false"
                class="wrapper mr-1 wrapper ghost ghost secondary medium"
                data-testid="duplicate-icon-button"
                title="Duplicate campaign"
                type="button"
              >
                <i
                  class="material-icons icon"
                >
                  file_copy
                </i>
              </button>
              <button
                aria-disabled="false"
                class="wrapper mr-1 wrapper ghost ghost destructive medium"
                data-testid="delete-icon-button"
                id="delete-campaign-not-so-good-campaign-d8f9-fds486-sf78"
                title="Delete campaign"
                type="button"
              >
                <i
                  class="material-icons icon"
                >
                  delete
                </i>
              </button>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`<GorgiasChatIntegrationCampaigns/> Revenue campaign generator should display infobox to admin 1`] = `
[
  [
    Immutable.Map {
      "id": 118,
      "type": "gorgias_chat",
      "name": "My new chat 3",
      "meta": Immutable.Map {
        "campaigns": Immutable.List [],
      },
    },
    {
      "generate_revenue_campaigns": true,
    },
  ],
]
`;

exports[`<GorgiasChatIntegrationCampaigns/> should display the empty state correctly 1`] = `
<div>
  <div
    class="full-width"
  >
    <div
      class="page-header pageHeader"
    >
      <nav
        aria-label="breadcrumb"
        class=""
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item"
          >
            <a
              to="/app/settings/channels/gorgias_chat"
            >
              Chat
            </a>
          </li>
          <li
            class="breadcrumb-item"
          >
            My new chat
          </li>
        </ol>
      </nav>
      <div>
        <div
          class="automationSubscriptionButton"
        >
          <div
            class="d-flex align-items-center upgradeLink"
          >
            <a
              to="[object Object]"
            >
              <button
                aria-disabled="false"
                class="wrapper ghost primary medium"
                type="button"
              >
                <span
                  class="wrapper"
                >
                  <i
                    class="material-icons icon isLeft medium"
                  >
                    auto_awesome
                  </i>
                  Upgrade
                </span>
              </button>
            </a>
          </div>
        </div>
        <a
          class="createCampaignLink"
          to="/app/settings/channels/gorgias_chat/118/campaigns/new"
        >
          <button
            aria-disabled="false"
            class="wrapper fill primary medium"
            type="button"
          >
            Create Campaign
          </button>
        </a>
      </div>
    </div>
    <div
      data-testid="GorgiasChatIntegrationHeader"
    />
    <div
      class="pageContainer container-fluid"
    >
      <div
        class="campaignsToolbar"
      >
        <div
          class="wrapper search"
        >
          <span
            class="prefix"
          >
            <i
              class="material-icons icon"
            >
              search
            </i>
          </span>
          <input
            class="input"
            id="input-text-1"
            name="input-text-1"
            placeholder="Search by campaign name"
            type="text"
            value=""
          />
          <span
            class="suffix"
          >
            <i
              class="material-icons icon material-icons-outlined clear hidden"
            >
              cancel
            </i>
          </span>
        </div>
      </div>
      <div
        class="quickFiltersContainer"
      >
        <div
          class="container"
        >
          <div
            class="item"
          >
            <button
              aria-pressed="false"
              class="container"
            >
              <span>
                Contains product cards
              </span>
            </button>
          </div>
          <div
            class="item"
          >
            <button
              aria-pressed="false"
              class="container"
            >
              <span>
                Contains discount codes
              </span>
            </button>
          </div>
          <div
            class="item"
          >
            <button
              aria-pressed="false"
              class="container"
            >
              <span>
                Triggered on exit intent
              </span>
            </button>
          </div>
          <div
            class="item"
          >
            <button
              aria-pressed="false"
              class="container"
            >
              <span>
                Triggered outside business hours
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="noCampaignsLayer"
      >
        This integration doesn't have any campaigns yet.
      </div>
    </div>
  </div>
</div>
`;

exports[`<GorgiasChatIntegrationCampaigns/> should display the list correctly 1`] = `
<div>
  <div
    class="full-width"
  >
    <div
      class="page-header pageHeader"
    >
      <nav
        aria-label="breadcrumb"
        class=""
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item"
          >
            <a
              to="/app/settings/channels/gorgias_chat"
            >
              Chat
            </a>
          </li>
          <li
            class="breadcrumb-item"
          >
            My new chat
          </li>
        </ol>
      </nav>
      <div>
        <div
          class="automationSubscriptionButton"
        >
          <div
            class="d-flex align-items-center upgradeLink"
          >
            <a
              to="[object Object]"
            >
              <button
                aria-disabled="false"
                class="wrapper ghost primary medium"
                type="button"
              >
                <span
                  class="wrapper"
                >
                  <i
                    class="material-icons icon isLeft medium"
                  >
                    auto_awesome
                  </i>
                  Upgrade
                </span>
              </button>
            </a>
          </div>
        </div>
        <a
          class="createCampaignLink"
          to="/app/settings/channels/gorgias_chat/118/campaigns/new"
        >
          <button
            aria-disabled="false"
            class="wrapper fill primary medium"
            type="button"
          >
            Create Campaign
          </button>
        </a>
      </div>
    </div>
    <div
      data-testid="GorgiasChatIntegrationHeader"
    />
    <div
      class="pageContainer container-fluid"
    >
      <div
        class="campaignsToolbar"
      >
        <div
          class="wrapper search"
        >
          <span
            class="prefix"
          >
            <i
              class="material-icons icon"
            >
              search
            </i>
          </span>
          <input
            class="input"
            id="input-text-2"
            name="input-text-2"
            placeholder="Search by campaign name"
            type="text"
            value=""
          />
          <span
            class="suffix"
          >
            <i
              class="material-icons icon material-icons-outlined clear hidden"
            >
              cancel
            </i>
          </span>
        </div>
        <div
          class="container"
          role="radiogroup"
        >
          <label
            class="badge checked"
          >
            <input
              checked=""
              class="input"
              name="all"
              type="radio"
            />
            <div>
              All
            </div>
          </label>
          <label
            class="badge"
          >
            <input
              class="input"
              name="active"
              type="radio"
            />
            <div>
              Active
            </div>
          </label>
          <label
            class="badge"
          >
            <input
              class="input"
              name="inactive"
              type="radio"
            />
            <div>
              Inactive
            </div>
          </label>
        </div>
      </div>
      <div
        class="quickFiltersContainer"
      >
        <div
          class="container"
        >
          <div
            class="item"
          >
            <button
              aria-pressed="false"
              class="container"
            >
              <span>
                Contains product cards
              </span>
            </button>
          </div>
          <div
            class="item"
          >
            <button
              aria-pressed="false"
              class="container"
            >
              <span>
                Contains discount codes
              </span>
            </button>
          </div>
          <div
            class="item"
          >
            <button
              aria-pressed="false"
              class="container"
            >
              <span>
                Triggered on exit intent
              </span>
            </button>
          </div>
          <div
            class="item"
          >
            <button
              aria-pressed="false"
              class="container"
            >
              <span>
                Triggered outside business hours
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <table
      class="table table-integrations mt-3 campaignsTable"
    >
      <thead
        class=""
      >
        <tr
          class="headerRow"
        >
          <td
            class="wrapper normal"
            style="width: 88px;"
          >
            <div
              class="content"
            >
              <div
                class="cell"
              >
                <span
                  class="title"
                />
                <i
                  class="material-icons md-1 directionIcon"
                >
                  arrow_upward
                </i>
              </div>
            </div>
          </td>
          <td
            class="wrapper is-clickable normal"
          >
            <div
              class="content"
            >
              <div
                class="cell"
              >
                <span
                  class="title"
                >
                  Campaign name
                </span>
                <i
                  class="material-icons md-1 directionIcon"
                >
                  arrow_upward
                </i>
              </div>
            </div>
          </td>
          <td
            class="wrapper is-clickable normal"
          >
            <div
              class="content"
            >
              <div
                class="cell"
              >
                <span
                  class="title"
                >
                  Creation date
                </span>
                <i
                  class="material-icons md-1 directionIcon"
                >
                  arrow_upward
                </i>
              </div>
            </div>
          </td>
          <td
            class="wrapper normal"
            style="width: 110px;"
          >
            <div
              class="content"
            >
              <div
                class="cell"
              >
                <span
                  class="title"
                />
                <i
                  class="material-icons md-1 directionIcon"
                >
                  arrow_upward
                </i>
              </div>
            </div>
          </td>
        </tr>
      </thead>
      <tbody
        class="tableBody"
      >
        <tr
          class="row tableRow"
        >
          <td
            class="wrapper normal"
            style="width: 88px;"
          >
            <div
              class="cellContent"
            >
              <div>
                <label
                  aria-checked="true"
                  aria-label="Enable campaign Super campaign"
                  class="label label"
                  for="toggle-button-3"
                  role="switch"
                >
                  <input
                    aria-label="Enable campaign Super campaign"
                    checked=""
                    class="input"
                    disabled=""
                    id="toggle-button-3"
                    name="toggle-button-3"
                    type="checkbox"
                  />
                  <div
                    class="slider"
                  />
                </label>
              </div>
            </div>
          </td>
          <td
            class="wrapper normal"
          >
            <div
              class="cellContent anchorCell"
            >
              <a
                class="anchor"
                to="/app/settings/channels/gorgias_chat/118/campaigns/156a4d-fg68h40-sd6f4"
              >
                <div>
                  <b>
                    Super campaign
                  </b>
                </div>
              </a>
            </div>
          </td>
          <td
            class="wrapper normal"
          >
            <div
              class="cellContent"
            >
              <div />
            </div>
          </td>
          <td
            class="wrapper normal"
            style="width: 110px;"
          >
            <div
              class="cellContent"
            >
              <button
                aria-disabled="false"
                class="wrapper mr-1 wrapper ghost ghost secondary medium"
                data-testid="duplicate-icon-button"
                title="Duplicate campaign"
                type="button"
              >
                <i
                  class="material-icons icon"
                >
                  file_copy
                </i>
              </button>
              <button
                aria-disabled="false"
                class="wrapper mr-1 wrapper ghost ghost destructive medium"
                data-testid="delete-icon-button"
                id="delete-campaign-156a4d-fg68h40-sd6f4"
                title="Delete campaign"
                type="button"
              >
                <i
                  class="material-icons icon"
                >
                  delete
                </i>
              </button>
            </div>
          </td>
        </tr>
        <tr
          class="row tableRow"
        >
          <td
            class="wrapper normal"
            style="width: 88px;"
          >
            <div
              class="cellContent"
            >
              <div>
                <label
                  aria-checked="false"
                  aria-label="Enable campaign Not so good campaign"
                  class="label label"
                  for="toggle-button-5"
                  role="switch"
                >
                  <input
                    aria-label="Enable campaign Not so good campaign"
                    class="input"
                    disabled=""
                    id="toggle-button-5"
                    name="toggle-button-5"
                    type="checkbox"
                  />
                  <div
                    class="slider"
                  />
                </label>
              </div>
            </div>
          </td>
          <td
            class="wrapper normal"
          >
            <div
              class="cellContent anchorCell"
            >
              <a
                class="anchor"
                to="/app/settings/channels/gorgias_chat/118/campaigns/not-so-good-campaign-d8f9-fds486-sf78"
              >
                <div>
                  <b>
                    Not so good campaign
                  </b>
                </div>
              </a>
            </div>
          </td>
          <td
            class="wrapper normal"
          >
            <div
              class="cellContent"
            >
              <div />
            </div>
          </td>
          <td
            class="wrapper normal"
            style="width: 110px;"
          >
            <div
              class="cellContent"
            >
              <button
                aria-disabled="false"
                class="wrapper mr-1 wrapper ghost ghost secondary medium"
                data-testid="duplicate-icon-button"
                title="Duplicate campaign"
                type="button"
              >
                <i
                  class="material-icons icon"
                >
                  file_copy
                </i>
              </button>
              <button
                aria-disabled="false"
                class="wrapper mr-1 wrapper ghost ghost destructive medium"
                data-testid="delete-icon-button"
                id="delete-campaign-not-so-good-campaign-d8f9-fds486-sf78"
                title="Delete campaign"
                type="button"
              >
                <i
                  class="material-icons icon"
                >
                  delete
                </i>
              </button>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
